--- a/flexbox-tp2.css
+++ b/flexbox-tp2.css
@@ -9,18 +9,27 @@
     height: 100%;
     background-image: url(back-ground-pc.jpg);
 }
+.menu-f{
+    color: aliceblue;
+    text-decoration: none;
+}
+
+.menu-f:hover{
+    color: aliceblue;
+    text-decoration: none;
+}
 
 .links{
-  z-index: 1;
-  margin: -20% 0% 0% 0%;
-  width: 100%;
-  height: 150px;
-  position: fixed;
-  display: flex;
-  background: rgba(255, 255, 255, .1);
-  align-items: center;
-  backdrop-filter: blur(10px);
-  border-bottom: 2px solid rgba(255, 255, 255, .2);
+    margin: -20% 0% 0% 0%;
+    z-index: 1;
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    display: flex;
+    background: rgba(255, 255, 255, .1);
+    align-items: center;
+    backdrop-filter: blur(10px);
+    border-bottom: 2px solid rgba(255, 255, 255, .2);
 
 }
 .maalomat{
