--- a/flexbox-tp2.css
+++ b/flexbox-tp2.css
@@ -258,21 +258,24 @@ footer h3 {
     margin-top: 1%;
 }
 .send{
-    padding-left: 1%;
-    padding-top: 2%;
+    margin-left: 30%;
+    text-align: center;
+    font-size: 0.5cm;
     color: #fff;
-    height: 0.9cm;
-    width: 1.9cm;
+    height: 1cm;
+    width: 2.3cm;
     border-radius: 20px;
-    background-color: #2998E4;
+    background-color: #f5b41c;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .send:hover{
+    text-align: center;
+    font-size: 0.5cm;
     color: #fff;
-    height: 1cm;
-    width: 2cm;
+    height: 1.1cm;
+    width: 2.5cm;
     border-radius: 20px;
-    background-color: #85c7f4;
+    background-color: #f5b41c;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 }
